syntax = "proto3";

package hello;

option go_package = "github.com/matteo-gz/grpc-guide/chapter1/hello/proto;pb";

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {}
  rpc SayHelloClientStream (stream HelloRequest) returns (HelloReply) {}
  rpc SayHelloServerStream (HelloRequest) returns (stream HelloReply) {}
  rpc SayHelloBidirectionalStream (stream HelloRequest) returns (stream HelloReply) {}
}
// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}